--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ __pycache__/
 *.py~
 *.pyc
 *.pyo
+*.png
 
 # Jupyter Notebooks
 .ipynb_checkpoints/
@@ -21,6 +22,7 @@ __pycache__/
 *.log
 *.out
 *.toc
+*.zip
 
 # Compiled LaTeX
 *.dvi
